--- a/style/public_list_style.css
+++ b/style/public_list_style.css
@@ -23,18 +23,16 @@ div.filter {
     vertical-align: top;
     width: 250px;
     background-color: #e8e8e8;
-    font-size: 9pt;
     padding: 10px;
     margin: 15px 15px 0 0;
     border-radius: 4px;
 }
 
 div.filter_block {
-    float: left;
     width: auto;    
 }
 
-#query_input {
+.query_input {
     width: 232px;
 }
 
@@ -45,41 +43,6 @@ div.search_submit {
 .search_submit input:hover {
     cursor: pointer;
     background-color: #e6e6e6;
-}
-
-div.genre_filter span.genre_indicator {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin-left: 5px;
-    border-radius: 8px;
-}
-
-div.genre_filter .selected {
-    background: #fff;
-}
-
-a.genre_filter_row {
-    padding: 5px;
-    padding-left: 32px;
-    text-indent: -32px;
-    display: block;
-    text-decoration: none;
-}
-
-.genre_filter_row:hover {
-    background: #f8f8f8;
-}
-
-.level1 {
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-top: 10px;
-}
-
-.genre_filter_row .num {
-    color: #666;
-    font-weight: normal;
 }
 
 div.filter_block .label {
@@ -101,6 +64,77 @@ div.filter_block .label {
 #notafter {
     margin-left : 5px;
 }
+
+/* test */
+
+
+/* HTML5 Boilerplate accessible hidden styles */
+div.genre_filter [type="radio"] {
+  border: 0; 
+  clip: rect(0 0 0 0); 
+  height: 1px; margin: -1px; 
+  overflow: hidden; 
+  padding: 0; 
+  position: absolute; 
+  width: 1px;
+}
+
+/* One radio button per line */
+div.genre_filter label {
+  display: block;
+  cursor: pointer;
+}
+
+
+/* the basic, unchecked style */
+div.genre_filter [type="radio"] + span:before {
+  content: '';
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  vertical-align: -0.25em;
+  border-radius: 8px;
+  border: 1px solid #999;
+  margin-right: 24px;
+  transition: 0.5s ease all;
+}
+
+/* the checked style using the :checked pseudo class */
+div.genre_filter [type="radio"]:checked + span:before {
+  box-shadow: 0 0 1px 2px #000;
+}
+
+div.genre_filter span.genre_indicator {
+/*    display: inline-block;*/
+    width: 16px;
+    height: 16px;
+    margin-right: -20px;
+    border-radius: 8px;
+}
+
+.genre_filter_row {
+    padding: 0 0 5px 30px;
+    text-indent: -30px;
+    display: block;
+    text-decoration: none;
+}
+
+.genre_filter_row:hover {
+    background: #f8f8f8;
+}
+
+.level1 {
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-top: 10px;
+}
+
+.genre_filter_row .num {
+    color: #666;
+    font-weight: normal;
+}
+
+
 
 /* CSS for the "clear filter" elements */
 
@@ -197,7 +231,7 @@ div.results {
 
 .result_row .title {
     font-size: 11pt;
-    padding: 4px 5px 4px 5px;
+    padding: 2px 5px 2px 5px;
 }
 
 .result_row .list_subtitle {
@@ -261,7 +295,7 @@ div.results {
     width: 9%;
     background-color: #444;
     white-space: nowrap;
-    padding: 5px 8px 3px 8px;
+    padding: 2px 8px 2px 8px;
     color: #fff;
     font-size: 9pt
 }
@@ -420,66 +454,72 @@ a:hover.abbr .expan {
 .vocal_music                { background-color: #c9a044;
                               color: #fff; }
                               
-.pos1                       { color: #fff; }
                               
 
 /* sub-categories */
-.opera                      { background-color: #f72c8d;
+div.genre_filter [type="radio"] + span.opera:before,
+.results .opera
+                            { background-color: #f72c8d;
                               color: #fff; }
-.opera_pos1                { background-color: #C72371;}
 
-.incidental_music           { background-color: #c72279;
+div.genre_filter [type="radio"] + span.incidental_music:before,
+.results .incidental_music
+                            { background-color: #c72279;
                               color: #fff; }
-.incidental_music_pos1     { background-color: #A01B61;}
 
-.ballet                     { background-color: #9c1dac;
+div.genre_filter [type="radio"] + span.ballet:before,
+.results .ballet
+                            { background-color: #9c1dac;
                               color: #fff; }
-.ballet_pos1               { background-color: #7E178A;}
 
-.symphony                   { background-color: #4c89fe;
+div.genre_filter [type="radio"] + span.symphony:before,
+.results .symphony 
+                            { background-color: #4c89fe;
                               color: #fff; }
-.symphony_pos1             { background-color: #3D6ECD;}
 
-.concerto                   { background-color: #01aef5;
+div.genre_filter [type="radio"] + span.concerto:before,
+.results .concerto
+                            { background-color: #01aef5;
                               color: #fff; }
-.concerto_pos1             { background-color: #008CC5; }
 
-.other_orchestral_music     { background-color: #00b7c0;
+div.genre_filter [type="radio"] + span.other_orchestral_music:before,
+.results .other_orchestral_music
+                            { background-color: #00b7c0;
                               color: #fff; }
-.other_orchestral_music_pos1 
-                            { background-color: #00939B;}
 
-.chamber_music              { background-color: #01df87;
+div.genre_filter [type="radio"] + span.chamber_music:before,
+.results .chamber_music
+                            { background-color: #01df87;
                               color: #fff; }
-.chamber_music_pos1        { background-color: #00B46D;}
 
-.piano_music, .organ_music,
-.music_for_one_instrument   { background-color: #55de01;
+div.genre_filter [type="radio"] + span.piano_music:before,
+.results .piano_music,
+div.genre_filter [type="radio"] + span.organ_music:before,
+.results .organ_music,
+div.genre_filter [type="radio"] + span.music_for_one_instrument:before,
+.results .music_for_one_instrument
+                            { background-color: #55de01;
                               color: #fff; }
-.piano_music_pos1, .organ_music_pos1,
-.music_for_one_instrument_pos1  
-                            { background-color: #44B300;}
 
-.music_for_vocal_soloists_and_instruments_with_or_without_choir  
+div.genre_filter [type="radio"] + span.music_for_vocal_soloists_and_instruments_with_or_without_choir:before,
+.results .music_for_vocal_soloists_and_instruments_with_or_without_choir
                             { background-color: #f3fb53;
                               color: #000; }
-.music_for_vocal_soloists_and_instruments_with_or_without_choir_pos1 
-                            { background-color: #C4CA43;}
 
-.choral_music_with_instruments 
+div.genre_filter [type="radio"] + span.choral_music_with_instruments:before,
+.results .choral_music_with_instruments
                             { background-color: #ffb147;
                               color: #fff; }
-.choral_music_with_instruments_pos1 
-                            { background-color: #CE8E39;}
 
-.a_cappella_choral_music    { background-color: #ff7647;
+div.genre_filter [type="radio"] + span.a_cappella_choral_music:before,
+.results .a_cappella_choral_music
+                            { background-color: #ff7647;
                               color: #fff; }
-.a_cappella_choral_music_pos1 
-                            { background-color: #CE5F39;}
 
-.song                       { background-color: #fc495e;
+div.genre_filter [type="radio"] + span.song:before,
+.results .song
+                            { background-color: #fc495e;
                               color: #fff; }
-.song_pos1                 { background-color: #CB3A4B;}
 
 /* Print style rules */
 @media print {
