eliminated remaining connections to /editor/
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@136 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/style/dcm.css
+++ b/style/dcm.css
@@ -159,9 +159,9 @@ input[type=text] {
 }
 
 input[type="checkbox"] {
-    border: 1px solid #666;
     height: 15px;
     width: 15px;
+    border: 0;
 } 
 
 .button {
