customized search button
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@140 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/style/dcm.css
+++ b/style/dcm.css
@@ -47,6 +47,11 @@ a img {
     border: none;
 }
 
+input[type=submit],
+input[type=button] {
+    cursor: pointer;
+}
+
 #all {
     width: auto;
     min-width: 600px;
