updated text; layout adjustments
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@149 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/style/cnw/cnw.css
+++ b/cnw/style/cnw/cnw.css
@@ -99,7 +99,7 @@ body.text #main ul.bullet
 
 body.text #toc li {
     margin: 1em 0 0 1.2em;
-    list-style-image: url('/editor/images/html_link.png');
+    list-style-image: url('../images/html_link.png');
 }
 
 body.text #toc li a {
