--- a/cat-site/style/cnw/collection.css
+++ b/cat-site/style/cnw/collection.css
@@ -78,8 +78,8 @@ body.text #main h3 {
 
 body.text #main ul
 {
-    list-style-type: none;
-    padding-left: 0;
+ /*   list-style-type: none;
+    padding-left: 0;*/
 }
 
 body.text #main ul ul
