added FS 51 to list; added help to keyword search field; minor style adjustments
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@212 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/style/public_list_style.css
+++ b/cat-site/style/public_list_style.css
@@ -127,7 +127,7 @@ input[type=checkbox]:not(old) + label {
 
 input[type=checkbox]:not(old) + label:hover,
 input[type=radio   ]:not(old) + label:hover{
-    background-color: #f8f8f8;
+    background-color: #fff;
 }
 
 input[type=checkbox]:not(old):checked + label{
@@ -135,7 +135,7 @@ input[type=checkbox]:not(old):checked + label{
 }
 
 input[type=radio]:not(old):checked + label{
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 div.genre_filter span.genre_indicator {
