added SchW files; eliminated redundant css
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@233 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/style/schw/collection.css
+++ b/cat-site/style/schw/collection.css
@@ -1,15 +1,14 @@
 /* Collection-specific colors */
 body {
-    background-color: #88292f;
+    background-color: #866746;
 }
 
 /* Header and footer */
 #all {
-    background-color: #88292f;
+    background-color: #866746;
 }
 
 /* Top menu */
 #menu a:hover, #menu .selected {
-    background-color: #a84648;
+    background-color: #9c7751;
 }
-
