--- a/cat-site/style/public_list_style.css
+++ b/cat-site/style/public_list_style.css
@@ -22,7 +22,7 @@ div.filter {
     display: table-cell;
     vertical-align: top;
     width: 250px;
-    background-color: #e8e8e8;
+    background-color: #d0d0d0;
     padding: 10px;
     margin: 15px 15px 0 0;
     border-radius: 4px;
@@ -135,15 +135,16 @@ input[type=checkbox]:not(old):checked + label{
 }
 
 input[type=radio]:not(old):checked + label{
-  background-color: #fff;
+  background-color: #eee;
 }
 
 div.genre_filter span.genre_indicator {
-    width: 14px;
-    height: 14px;
+    width: 12px;
+    height: 12px;
     border-radius: 8px;
+    border: 1px solid #555;
     display: inline-block;
-    margin: 0 0 0 0;
+    margin: 1px 0 0 0;
     vertical-align: text-top;
 }
 /* end radio buttons and checkboxes */
