added style for error messages
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@250 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/style/public_list_style.css
+++ b/cat-site/style/public_list_style.css
@@ -16,6 +16,13 @@ div.spacer div {
     width: 15px;
 }
 
+div.error {
+    background-color:#fdd;
+    border: 1px solid #faa;
+    font-size: 8pt; 
+    padding: 4px;
+}
+
 /* CSS for the filter area */
 
 div.filter {
