library's logo and name updated
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@282 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/style/dcm.css
+++ b/cat-site/style/dcm.css
@@ -117,13 +117,13 @@ input[type=button] {
 }
 
 .kb_logo {
-    float: left;
-    width:auto;
-    margin: 3px 10px 0 0;
+    float: right;
+    margin: 0;
 }
 
-.kb-logo img {
+.kb_logo img {
     border: none;
+    height: 50px;
 }
 
 
