fixed the "hide alternative languages" link and a few styling issues
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@283 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/style/mei_to_html_public.css
+++ b/cat-site/style/mei_to_html_public.css
@@ -360,7 +360,7 @@ a:hover.abbr .expan {
     padding: 8px 4px 4px 4px;
     width: auto;
     max-width: 300px;
-    margin-top: 20px;
+    margin-top: 15px;
     margin-left: -5px;
     border: 1px solid #ddd;
     font-weight:normal;
@@ -374,6 +374,19 @@ a:hover.abbr .expan {
     /* For MSIE 6-8 */
     -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=135, Color='#333333')"; 
     filter: progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=135, Color='#333333'); 
+}
+
+a.ftnref {
+    font-size: .8em;
+    vertical-align: super;
+    text-decoration: underline;
+    line-height: 1em;
+    border-bottom: none;
+}
+
+a.ftnref span.expan {
+    font-size: 1.25em;
+    line-height: 1.5em;
 }
 
 div.perfmedium p { 
