--- a/cat-site/style/dcm.css
+++ b/cat-site/style/dcm.css
@@ -332,11 +332,17 @@ p.illustration_text {
     
     #main {
         padding: 5pt 0 0 0;
-        border-top: .1pt solid #000;    
     }    
     
     #header {
-        margin-bottom: 2em;
+        margin-bottom: 1em;
+        padding-bottom: 1.5em;
+        color: #000;
+        border-bottom: 1px solid #000;
+     }
+    
+    #header a:link, #header a:active, #header a:visited, #header a:hover {
+        color: #000;
     }
     
     #footer {
@@ -354,11 +360,11 @@ p.illustration_text {
     }
     
     #header h1 {
-        font-size: 3em;    
+        font-size: 1.5em;
     }
 
     #header h2 {
-        font-size: 1.5em;    
+        font-size: 1em;
     }
 
     .noprint {
