updated texts and SchW names list

--- a/cat-site/style/public_list_style.css
+++ b/cat-site/style/public_list_style.css
@@ -484,7 +484,7 @@ a:hover.abbr .expan {
 
 /* main categories */
 
-.stage_music, .instrumental_music, .vocal_music
+.stage_music, .instrumental_music, .vocal_music, .text
                             { background-color: #fff;
                               color: #000; }
 
