--- a/cat-site/style/schw/collection.css
+++ b/cat-site/style/schw/collection.css
@@ -17,8 +17,7 @@ body {
 /* Genre color codes */
 /* main categories */
 
-.text                      { background-color: #fff;
-                              color: #000; }
+.text                      { color: #000; }
 
 /* sub-categories */
 
