--- a/cat-site/style/schw/collection.css
+++ b/cat-site/style/schw/collection.css
@@ -57,7 +57,7 @@ body {
 
 /* red */
 .music_for_vocal_soloists_and_instruments_with_or_without_choir  
-                            { background-color: #f9adb2;
+                            { background-color: #ff878f;
                               color: #000; }
 
 .choral_music_with_instruments 
