--- a/cat-site/style/mei_to_html_public.css
+++ b/cat-site/style/mei_to_html_public.css
@@ -339,7 +339,7 @@ a.abbr {
     border-bottom: 1px dashed #666;
     cursor: help;   
     text-decoration: none;
-    color: #000;
+    color: inherit;
 }
 
 a:hover.abbr .expan {
